mongodb_full_deployment/kube/p.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongotest-deployment
  labels:
    app: mongotest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongotest
  template:
    metadata:
      labels:
        app: mongotest
    spec:
      containers:
      - name: mongotest
        image: mongo:latest
        ports:
        - containerPort: 8010
