mongodb_full_deployment/kube/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ingress
  namespace: mongodb
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: nginx-loadbalancer-svc
            port:
              number: 80
